change to CSS package

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -1,6 +1,6 @@
 // Button
 //
-// Button stylee.
+// Button style normalize.
 //
 // Markup:
 // <input type="button" class="x-button {{modifier_class}}" value="Button" />
