--- a/src/themes/experimentality/theme.scss
+++ b/src/themes/experimentality/theme.scss
@@ -1,9 +1,9 @@
 // Highlight Colors
 //
-// Colors we use for higlighting states.
+// Colors we use for higlighting states by brand .
 //
-// $primary - #00BCFF; primary
-// $secondary - #A1CB00; secondary
+// $primary - #00BCFF; Primary Color Blue
+// $secondary - #A1CB00; Secondary Color Green
 // $black - #1E1E1E; black
 // $alt-primary - #48484A;  alt primary
 // $alt-secondary - #006262;  alt secondary
