--- a/src/themes/experimentality/theme.scss
+++ b/src/themes/experimentality/theme.scss
@@ -1,6 +1,6 @@
 // Highlight Colors
 //
-// Colors we use for higlighting states by brand .
+// Colors we use for higlighting states by brand ?????.
 //
 // $primary - #00BCFF; Primary Color Blue
 // $secondary - #A1CB00; Secondary Color Green
