--- a/src/themes/experimentality/theme.scss
+++ b/src/themes/experimentality/theme.scss
@@ -1,6 +1,17 @@
+// Import variables SASS/SCSS 
+//
+// import variables colors from theme on <br>
+// ```css
+//  @import 'exp-ui/dist/theme/experimentality';
+// ```
+//
+//
+// Styleguide Brandlines.1
+
+
 // Highlight Colors
 //
-// Colors we use for higlighting states by brand ?????.
+// Colors we use for higlighting states by brand TEST 2.
 //
 // $primary - #00BCFF; Primary Color Blue
 // $secondary - #A1CB00; Secondary Color Green
@@ -17,7 +28,7 @@
 // $vtexAlert  - #ff4c4c; alert
 // $magic - #97113d; magic
 //
-// Styleguide Base.colors
+// Styleguide Brandlines.2
 
 $primary: #00BCFF;
 $secondary: #A1CB00;
