--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,32 @@
 @import './components/components.scss';
+@import './layout/layouts';
 @import './themes/experimentality/theme.scss';
+@import './commons/commons.scss';
 
+
+// Specificity
+//
+// How Use.
+//
+// Styleguide Specificity
+
+
+// Layout
+//
+// Components and options for laying out , including wrapping containers, a powerful grid system, a flexible media object, and responsive utility classes.
+//
+// Styleguide Layout
+
+
+// Components
+//
+// Button styles can be applied to anything with the `.btn` class applied.
+// However, typically you'll want to apply these to only `<a>` and `<button>` elements for the best rendering.
+//
+// Styleguide Components
+
+
+// Brandlines
+//
+//
+// Styleguide Brandlines
