--- a/src/components/input/_input.scss
+++ b/src/components/input/_input.scss
@@ -1,35 +1,3 @@
-@charset "UTF-8";
-.x-button {
-  display: inline-block;
-  font-weight: bold;
-  border-radius: 1.3rem;
-  border: none;
-  margin: 0 0.5rem;
-  min-height: 2.5rem;
-  box-sizing: border-box;
-  font-size: 1rem;
-  padding: 0 1rem;
-  transition: all 0.3s ease;
-  text-decoration: none;
-  vertical-align: middle;
-  line-height: 2.5rem;
-}
-.x-button.x-button-disabled, .x-button[disabled] {
-  cursor: no-drop;
-  opacity: 0.5;
-}
-.x-button:focus {
-  outline: none;
-  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
-}
-.x-button:hover {
-  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
-  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
-  text-decoration: none;
-}
-.x-button:active {
-  box-shadow: inset 0 0 9px rgba(0, 0, 0, 0.7);
-}
 
 /*
  Input
@@ -90,47 +58,54 @@
 
  Styleguide Components.2
  */
-.x-input-text {
-  padding: 0.5rem;
-  font-size: 1rem;
-  display: block;
-  line-height: 1.25rem;
-  border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
-  box-sizing: border-box;
-  width: 100%;
-}
-.x-input-text:hover {
-  background-color: rgba(0, 0, 0, 0.025);
-}
-.x-input-container {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  padding: 0.5rem;
-  min-height: 5rem;
-  vertical-align: middle;
-}
-.x-input-message {
-  display: block;
-  font-style: italic;
-  opacity: 0.7;
-}
-.x-input-title {
-  display: block;
-  font-weight: bold;
-}
-.x-input-ok .x-input-text {
-  border-bottom-color: #A1CB00;
-  color: #A1CB00;
-}
-.x-input-ok .x-input-message {
-  color: transparent;
-}
-.x-input-error .x-input-text {
-  border-bottom-color: #ff4c4c;
-  color: #ff4c4c;
-}
-.x-input-error .x-input-message {
-  color: #ff4c4c;
+
+.x-input{
+  &-text{
+    padding: 0.5rem;
+    font-size: 1rem;
+    display: block;
+    line-height: 1.25rem;
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.6);
+    box-sizing: border-box;
+    width: 100%;
+    &:hover{
+      background-color: rgba(0,0,0,0.025);
+    }
+  }
+  &-container{
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    padding: 0.5rem;
+    min-height: 5rem;
+    vertical-align: middle;
+  }
+  &-message{
+    display: block;
+    font-style: italic;
+    opacity: 0.7;
+  }
+  &-title{
+    display: block;
+    font-weight: bold;
+  }
+  &-ok{
+    .x-input-text{
+      border-bottom-color: #A1CB00;
+      color: #A1CB00;
+    }
+    .x-input-message{
+      color: transparent;
+    }
+  }
+  &-error{
+    .x-input-text{
+      border-bottom-color: #ff4c4c;
+      color: #ff4c4c;
+    }
+    .x-input-message{
+      color: #ff4c4c;
+    }
+  }
 }
