--- a/styleguide/exp-ui/index.css
+++ b/styleguide/exp-ui/index.css
@@ -1,24 +1,138 @@
+@charset "UTF-8";
 .x-button {
   display: inline-block;
   font-weight: bold;
-  border-radius: 0.25rem;
-  border-width: 0.125rem;
+  border-radius: 1.3rem;
+  border: none;
   margin: 0 0.5rem;
   min-height: 2.5rem;
   box-sizing: border-box;
   font-size: 1rem;
+  padding: 0 1rem;
+  transition: all 0.3s ease;
+  text-decoration: none;
+  vertical-align: middle;
+  line-height: 2.5rem;
 }
-.x-button.blue-theme {
-  color: #fff;
+.x-button.x-button-disabled, .x-button[disabled] {
+  cursor: no-drop;
+  opacity: 0.5;
 }
-.x-button.blue-theme:hover {
-  opacity: 0.9;
+.x-button:focus {
+  outline: none;
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
 }
-.x-button.alert-theme {
-  color: #fff;
+.x-button:hover {
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+  text-decoration: none;
 }
-.x-button.alert-theme:hover {
-  opacity: 0.9;
+.x-button:active {
+  box-shadow: inset 0 0 9px rgba(0, 0, 0, 0.7);
+}
+
+/*
+ Input
+
+ Input TEXT style.
+ <div class="x-grid-row">
+    <div class="x-grid-col-50">
+      <div class="x-input-container">
+         <label class="x-input-title"> Titulo </label>
+         <input type="text" class="x-input-text" placeholder="Styliguide" />
+         <label class="x-input-message"> <!-- null message --> </label>
+      </div>
+    </div>
+    <div class="x-grid-col-50">
+      <div class="x-input-container">
+         <label class="x-input-title"> Titulo </label>
+         <input type="text" class="x-input-text" placeholder="Styliguide" />
+         <label class="x-input-message"> * Maximo 10 caracteres </label>
+      </div>
+    </div>
+    <div class="x-grid-col-50">
+      <div class="x-input-container x-input-error">
+         <label class="x-input-title"> Titulo </label>
+         <input type="text" class="x-input-text" value="Styliguide Fail" />
+         <label class="x-input-message "> * Maximo 10 caracteres </label>
+      </div>
+    </div>
+    <div class="x-grid-col-50">
+      <div class="x-input-container x-input-ok">
+         <label class="x-input-title"> Titulo </label>
+         <input type="text" class="x-input-text" value="Styliguide OK" />
+         <label class="x-input-message"> * Maximo 10 caracteres </label>
+      </div>
+    </div>
+  </div>
+
+
+ ```markup
+
+  <!-- Input -->
+  <div class="x-input-container">
+      <label class="x-input-title"> Titulo </label>
+      <input type="text" class="x-input-text" placeholder="Styliguide" />
+      <label class="x-input-message"> <!-- message --> </label> <!-- optional -->
+  </div>
+  <!-- Input -->
+
+  <!-- Message Status -->
+  <div class="x-input-container {{ x-input-ok | x-input-error }} ">
+      <label class="x-input-title"> Titulo </label>
+      <input type="text" class="x-input-text" value="Input OK" />
+      <label class="x-input-message "> * Maximo 10 caracteres </label>
+  </div>
+  <!-- Message Status -->
+
+
+  ```
+
+ Styleguide Components.2
+ */
+.x-input-text {
+  padding: 0.5rem;
+  font-size: 1rem;
+  display: block;
+  line-height: 1.25rem;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
+  box-sizing: border-box;
+  width: 100%;
+}
+.x-input-text:hover {
+  background-color: rgba(0, 0, 0, 0.025);
+}
+.x-input-container {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  padding: 0.5rem;
+  min-height: 5rem;
+  vertical-align: middle;
+}
+.x-input-message {
+  display: block;
+  font-style: italic;
+  opacity: 0.7;
+}
+.x-input-title {
+  display: block;
+  font-weight: bold;
+}
+.x-input-ok .x-input-text {
+  border-bottom-color: #A1CB00;
+  color: #A1CB00;
+}
+.x-input-ok .x-input-message {
+  color: transparent;
+}
+.x-input-error .x-input-text {
+  border-bottom-color: #ff4c4c;
+  color: #ff4c4c;
+}
+.x-input-error .x-input-message {
+  color: #ff4c4c;
 }
 
 /*      ExperiGrid     */
@@ -371,6 +485,13 @@ body {
   margin: 0;
 }
 
+* {
+  box-sizing: border-box;
+  /* 1 */
+  margin: 0;
+  outline: none;
+}
+
 /* HTML5 display definitions
    ========================================================================== */
 /**
@@ -659,8 +780,6 @@ input {
  */
 input[type=checkbox],
 input[type=radio] {
-  box-sizing: border-box;
-  /* 1 */
   padding: 0;
   /* 2 */
 }
@@ -755,6 +874,26 @@ th {
   --alt-primary: #48484A;
   --alt-secondary: #006262;
   --white: #FFF;
+}
+
+.x-button {
+  background-color: #00BCFF;
+  color: #FFF;
+}
+.x-button:hover {
+  color: #FFF;
+}
+.x-button.x-button-alt {
+  background-color: #A1CB00;
+}
+.x-button.x-button-black {
+  background-color: #999;
+}
+.x-button.x-button-alert {
+  background-color: #ff4c4c;
+}
+.x-button.x-button-disabled, .x-button[disabled] {
+  background-color: #999;
 }
 
 .x-tx-cnt {
