--- a/styleguide/exp-ui/layout/layouts.css
+++ b/styleguide/exp-ui/layout/layouts.css
@@ -348,6 +348,13 @@ body {
   margin: 0;
 }
 
+* {
+  box-sizing: border-box;
+  /* 1 */
+  margin: 0;
+  outline: none;
+}
+
 /* HTML5 display definitions
    ========================================================================== */
 /**
@@ -636,8 +643,6 @@ input {
  */
 input[type=checkbox],
 input[type=radio] {
-  box-sizing: border-box;
-  /* 1 */
   padding: 0;
   /* 2 */
 }
