update config NPM and components

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,2 +1,30 @@
 @import './button/button';
 @import './input/input'
+
+// Selector
+//
+// Selector Input.
+//
+//
+// Styleguide Components.3
+
+// DatePicker
+//
+// DatePicker Input.
+//
+//
+// Styleguide Components.4
+
+// Checkbox
+//
+// Checkbox Input.
+//
+//
+// Styleguide Components.5
+
+// Radio Button
+//
+// Radio Button Input.
+//
+//
+// Styleguide Components.6
