--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,8 @@
 @import './layout/layouts';
 @import './themes/experimentality/theme.scss';
 @import './commons/commons.scss';
+@import './containers/containers.scss';
+@import './paragraphs/paragraphs.scss';
 
 
 // Specificity
