--- a/styleguide/exp-ui/components/components.css
+++ b/styleguide/exp-ui/components/components.css
@@ -1,4 +1,30 @@
 @charset "UTF-8";
+/*
+ Button
+
+ Button style & normalize.
+
+ Markup:
+  <div class="x-grid-row">
+    <div class="x-grid-col-50">
+      <button class="x-button {{modifier_class}}" > 
+        Button → 
+      </button>
+    </div>
+    <div class="x-grid-col-50">
+      <a href="#" class="x-button {{modifier_class}}" > 
+        Button → 
+      </a>
+    </div>
+  </div>
+
+ .x-button-alt - A blue button.
+ .x-button-black - Black Theme.
+ .x-button-alert - Alert Theme
+ .x-button-disabled - Disabled Theme
+
+ Styleguide Components.1
+*/
 .x-button {
   display: inline-block;
   font-weight: bold;
@@ -13,6 +39,8 @@
   text-decoration: none;
   vertical-align: middle;
   line-height: 2.5rem;
+  width: 80%;
+  text-align: center;
 }
 .x-button.x-button-disabled, .x-button[disabled] {
   cursor: no-drop;
