--- a/src/commons/commons.scss
+++ b/src/commons/commons.scss
@@ -2,10 +2,7 @@
 
 // align
 
-// Text
-.x-tx-cnt{
-  text-align: center;
-}
+
 
 // borders
 .x-br-1{
@@ -22,6 +19,9 @@
 
 .x-pd-small{
   padding: .5rem;
+}
+.x-pd-card{
+  padding: 1.2rem .5rem;
 }
 
 
