--- a/src/layout/normalize/_normalize.scss
+++ b/src/layout/normalize/_normalize.scss
@@ -42,6 +42,10 @@
   margin: 0;
   outline: none;
  }
+img{
+ width: 100%;
+ max-width: 100%;
+}
  /* HTML5 display definitions
     ========================================================================== */
  
