--- a/styleguide/exp-ui/commons/commons.css
+++ b/styleguide/exp-ui/commons/commons.css
@@ -1,7 +1,3 @@
-.x-tx-cnt {
-  text-align: center;
-}
-
 .x-br-1 {
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
@@ -16,6 +12,10 @@
 
 .x-pd-small {
   padding: 0.5rem;
+}
+
+.x-pd-card {
+  padding: 1.2rem 0.5rem;
 }
 
 .x-bg-overlay {
