--- a/styleguide/exp-ui/layout/layouts.css
+++ b/styleguide/exp-ui/layout/layouts.css
@@ -355,6 +355,11 @@ body {
   outline: none;
 }
 
+img {
+  width: 100%;
+  max-width: 100%;
+}
+
 /* HTML5 display definitions
    ========================================================================== */
 /**
