--- a/src/containers/containers.scss
+++ b/src/containers/containers.scss
@@ -1,5 +1,7 @@
 @import './morphcard/morphcard';
 @import './image-overlay/image-overlay';
+@import './fly-border/fly-border';
+@import './surf-container/surf-container';
 
 // Containers
 //
