--- a/styleguide/exp-ui/components/components.css
+++ b/styleguide/exp-ui/components/components.css
@@ -21,6 +21,7 @@
  .x-button-alt - A blue button.
  .x-button-black - Black Theme.
  .x-button-alert - Alert Theme
+ .x-button-white - White Theme
  .x-button-disabled - Disabled Theme
 
  Styleguide Components.1
@@ -39,6 +40,7 @@
   text-decoration: none;
   vertical-align: middle;
   line-height: 2.5rem;
+  white-space: nowrap;
   width: 80%;
   text-align: center;
 }
