--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
 @import './commons/commons.scss';
 @import './containers/containers.scss';
 @import './paragraphs/paragraphs.scss';
-
+@import './font/font.scss';
 
 // Specificity
 //
