--- a/src/themes/experimentality/theme.scss
+++ b/src/themes/experimentality/theme.scss
@@ -70,6 +70,14 @@ $magic: #97113d;
   &.x-button-alert{
     background-color: $vtexAlert;
   }
+  &.x-button-white{
+    background-color: transparent;
+    color: $white;
+    border: 1px solid $white;
+    &:hover{
+      background-color: rgba(250,250,250,0.5);
+    }
+  }
   &.x-button-disabled, &[disabled]{
     background-color: $gray;
   }
