--- a/styleguide/exp-ui/commons/commons.css
+++ b/styleguide/exp-ui/commons/commons.css
@@ -18,6 +18,22 @@
   padding: 1.2rem 0.5rem;
 }
 
+.x-mg-small {
+  margin: 0.5rem;
+}
+
+.x-mg-card {
+  margin: 1.2rem 0.5rem;
+}
+
 .x-bg-overlay {
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+.x-bg-black {
+  background-color: #333333;
+}
+
+p.x-white-text, div.x-white-text, article.x-white-text {
+  color: #FFF;
 }
