--- a/src/containers/surf-container/_surf-container.scss
+++ b/src/containers/surf-container/_surf-container.scss
@@ -12,7 +12,7 @@
         <div class="x-fly-br">
           <div class="x-fly-br-cnt">
             <div class="x-img-ovl">
-              <img src="/kss-assets/img/banner-vtex.jpg" alt>
+              <img src="../kss-assets/img/banner-vtex.jpg" alt>
               <div class="x-img-ovl-layer">
                 <div class="x-tx-lft x-pd-small">
                   <p> Blog/Ecommerce </p>
@@ -28,7 +28,7 @@
         <div class="x-fly-br">
           <div class="x-fly-br-cnt">
             <div class="x-img-ovl">
-              <img src="/kss-assets/img/banner-vtex.jpg" alt>
+              <img src="../kss-assets/img/banner-vtex.jpg" alt>
               <div class="x-img-ovl-layer">
                 <div class="x-tx-lft x-pd-small">
                   <p> Blog/Ecommerce </p>
@@ -44,7 +44,7 @@
         <div class="x-fly-br">
           <div class="x-fly-br-cnt">
             <div class="x-img-ovl">
-              <img src="/kss-assets/img/banner-vtex.jpg" alt>
+              <img src="../kss-assets/img/banner-vtex.jpg" alt>
               <div class="x-img-ovl-layer">
                 <div class="x-tx-lft x-pd-small">
                   <p> Blog/Ecommerce </p>
