url img relative fix for styleguide

--- a/src/containers/fly-border/_fly-border.scss
+++ b/src/containers/fly-border/_fly-border.scss
@@ -11,7 +11,7 @@
         <div class="x-fly-br-cnt">
           <!-- your content -->
           <div class="x-img-ovl">
-            <img src="../kss-assets/img/banner-vtex.jpg" alt>
+            <img src="kss-assets/img/banner-vtex.jpg" alt>
             <div class="x-img-ovl-layer">
               <div>
                 <h2 class="x-mg-small"> VTEX </h2>
