--- a/src/containers/image-overlay/_image-overlay.scss
+++ b/src/containers/image-overlay/_image-overlay.scss
@@ -6,7 +6,7 @@
  Markup:
  <div class="x-img-ovl">
     <!-- img simple element -->
-    <img src="../kss-assets/img/banner-vtex.jpg" alt>
+    <img src="kss-assets/img/banner-vtex.jpg" alt>
     <!-- over element -->
     <div class="x-img-ovl-layer">
       <div>
@@ -82,7 +82,7 @@
       <div class="x-card-morph">
         <!-- Image Overlay  -->
         <div class="x-img-ovl">
-          <img src="../kss-assets/img/banner-vtex.jpg" alt>
+          <img src="kss-assets/img/banner-vtex.jpg" alt>
           <div class="x-img-ovl-layer">
             <div>
               <h2 class="x-mg-small"> VTEX </h2>
