--- a/styleguide/exp-ui/containers/containers.css
+++ b/styleguide/exp-ui/containers/containers.css
@@ -56,7 +56,7 @@
  Markup:
  <div class="x-img-ovl">
     <!-- img simple element -->
-    <img src="../kss-assets/img/banner-vtex.jpg" alt>
+    <img src="kss-assets/img/banner-vtex.jpg" alt>
     <!-- over element -->
     <div class="x-img-ovl-layer">
       <div>
@@ -130,7 +130,7 @@
       <div class="x-card-morph">
         <!-- Image Overlay  -->
         <div class="x-img-ovl">
-          <img src="../kss-assets/img/banner-vtex.jpg" alt>
+          <img src="kss-assets/img/banner-vtex.jpg" alt>
           <div class="x-img-ovl-layer">
             <div>
               <h2 class="x-mg-small"> VTEX </h2>
@@ -166,7 +166,7 @@
         <div class="x-fly-br-cnt">
           <!-- your content -->
           <div class="x-img-ovl">
-            <img src="../kss-assets/img/banner-vtex.jpg" alt>
+            <img src="kss-assets/img/banner-vtex.jpg" alt>
             <div class="x-img-ovl-layer">
               <div>
                 <h2 class="x-mg-small"> VTEX </h2>
@@ -222,7 +222,7 @@
         <div class="x-fly-br">
           <div class="x-fly-br-cnt">
             <div class="x-img-ovl">
-              <img src="../kss-assets/img/banner-vtex.jpg" alt>
+              <img src="kss-assets/img/banner-vtex.jpg" alt>
               <div class="x-img-ovl-layer">
                 <div class="x-tx-lft x-pd-small">
                   <p> Blog/Ecommerce </p>
@@ -238,7 +238,7 @@
         <div class="x-fly-br">
           <div class="x-fly-br-cnt">
             <div class="x-img-ovl">
-              <img src="../kss-assets/img/banner-vtex.jpg" alt>
+              <img src="kss-assets/img/banner-vtex.jpg" alt>
               <div class="x-img-ovl-layer">
                 <div class="x-tx-lft x-pd-small">
                   <p> Blog/Ecommerce </p>
@@ -254,7 +254,7 @@
         <div class="x-fly-br">
           <div class="x-fly-br-cnt">
             <div class="x-img-ovl">
-              <img src="../kss-assets/img/banner-vtex.jpg" alt>
+              <img src="kss-assets/img/banner-vtex.jpg" alt>
               <div class="x-img-ovl-layer">
                 <div class="x-tx-lft x-pd-small">
                   <p> Blog/Ecommerce </p>
